--- a/hw3/style.css
+++ b/hw3/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #F8F8F9;
+}
+
 .card__item--button {
     background-color: #EB4757;
     background-image:  url("./search.svg");
@@ -13,24 +17,29 @@
 
 .list__switch {
     width: fit-content;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+}
+   
+.input-f {
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    outline: none;
+    border: 0;
+    border:  #f2f2f2;
+}
+
+.form_d {
     display: flex;
     background-color: #FFF;
+    align-items: center;
+    width: fit-content;
     padding: 20px;
     border-radius: 20px;
+    
 }
 
-.list__switch > div:hover {
-    cursor: pointer;
-    background-color: rgb(246, 246, 246);
-}
-
-.list__switch > div {
-    background-color: transparent;
-    border-radius: 20px;
-    padding: 12px;
-    color: #000;
-}
-
-body {
-    background-color: #F8F8F9;
+.div_a {
+    display: flex;
+    justify-content: center;
 }
